@@ -12,20 +12,19 @@
 
 ### 1.2 RocketMQ 的定位
 
-阿里巴巴面对海量订单 + 金融级可靠性 + 极高吞吐，当时开源方案（ActiveMQ 慢、Kafka 缺事务/延迟消息、强依赖 ZooKeeper）不适用。
-
+- 阿里巴巴面对海量订单 + 金融级可靠性 + 极高吞吐，当时开源方案（ActiveMQ 慢、Kafka 缺事务/延迟消息、强依赖 ZooKeeper）不适用。
 - **设计诉求**：高吞吐低延迟（顺序写+零拷贝）、业务友好（事务消息、延迟消息、Tag 过滤）、架构极简（自研 NameServer）、金融级可靠性（同步刷盘+复制）。RocketMQ 尤其对事务消息、定时消息等业务友好特性有极高的要求，这使其在复杂业务场景下成为首选。
-- **CAP 权衡**：NameServer 选择 AP（高可用+分区容错）。**Broker 默认采用异步复制（AP 架构，追求高可用与高性能），只有在显式配置为同步复制（`SYNC_MASTER`）时，才趋向于实现强一致性（CP 架构）**。整体架构分层权衡，不能简单归为 AP 或 CP。
+- **CAP 权衡**：NameServer 选择 AP（高可用+分区容错）。Broker 默认采用异步复制（AP 架构，追求高可用与高性能），只有在显式配置为同步复制（`SYNC_MASTER`）时，才趋向于实现强一致性（CP 架构）。整体架构分层权衡，不能简单归为 AP 或 CP。
 
 ## 二、架构全景与核心概念
 
 ### 2.1 四大角色
 
 |角色|功能|关键点|
-|:--|:--|:--|
-|**NameServer**|路由注册中心|无状态、节点间不通信、最终一致；Broker 注册，客户端拉取路由并缓存；**默认 JVM 堆内存通常为 256MB 或 512MB（视版本而定，如 `-Xms256m -Xmx256m`），非常轻量级**。（注：Broker 默认才是 8GB）|
+|---|---|---|
+|**NameServer**|路由注册中心|无状态、节点间不通信、最终一致；Broker 注册，客户端拉取路由并缓存；默认 JVM 堆内存通常为 256MB 或 512MB（视版本而定，如 `-Xms256m -Xmx256m`），非常轻量级。（注：Broker 默认才是 8GB）|
 |**Broker**|消息存储|Master‑Slave，顺序写 CommitLog，索引分离 ConsumeQueue，支持同步/异步刷盘和复制|
-|**Producer**|消息生产者|同步/异步/单向发送、重试、故障规避（ `sendLatencyFaultEnable` ：基于延迟分级隔离，对高延迟节点降权）|
+|**Producer**|消息生产者|同步/异步/单向发送、重试、故障规避（`sendLatencyFaultEnable`：基于延迟分级隔离，对高延迟节点降权）|
 |**Consumer**|消息消费者|传统队列粒度 / POP 消息粒度；负载均衡 Rebalance；手动/自动提交 Offset|
 
 ### 2.2 数据模型
@@ -35,27 +34,30 @@
 - **Tag**：二级过滤，Broker 端基于 Hash Code 预过滤 + 消费端二次精确过滤（防止Hash冲突）。
 - **ConsumerGroup**：消费组，同一消费组内消费者订阅关系必须一致（传统模式与 POP 模式均适用）；它是水平扩展和高可用的基础单元。
 
-**订阅关系不一致的真实后果**：  
-订阅关系不一致（同一 Group 内不同消费者订阅不同 Topic 或不同 Tag）不会导致消费者“卡死”，但会引起更严重的消息丢失和消费停滞。原因是 Broker 端以 Group 维度存储订阅信息，后注册的消费者会覆盖前者的订阅配置，导致部分消费者拉取到不匹配的消息而静默丢弃，或拉取请求被直接拒绝。订阅关系必须一致是保证数据完整性的红线。
+**【深度修正】订阅关系不一致的真实后果与底层震荡机制：**  
+订阅关系不一致（同一 Group 内不同消费者订阅不同 Topic 或不同 Tag）不会导致消费者“卡死”，但会引起更严重的消息丢失和消费 TPS 剧烈抖动。  
+**底层机制**：Broker 端以 Group 维度存储订阅信息（`SubscriptionData`）。消费者每 30 秒发送一次心跳，如果组内两个消费者（C1、C2）订阅不同，Broker 端的订阅关系会随着两个消费者的心跳交替而**不断震荡/翻转**。
+
+- **现象**：C1 心跳将订阅更新为 `Tag=A`，C2 心跳将订阅翻转为 `Tag=B`。这会导致该 Group 下的消息拉取时而正常、时而大面积丢弃，表现为“消费 TPS 剧烈抖动且伴随消息静默丢失”，而不是简单的“一次性覆盖”。订阅关系必须一致是保证数据完整性的红线。
 
 ## 三、存储引擎与性能突破
 
 ### 3.1 CommitLog + ConsumeQueue + IndexFile
 
 - **CommitLog**：所有消息顺序追加，物理文件 1GB，写满滚动。
-    - _【补充】_：每个 CommitLog 文件默认大小为 1GB，文件名长度为 20 位，由该文件的起始物理偏移量左补零生成（如 `00000000000000000000` 表示第一个文件）。新文件的文件名基于上一个文件的结束偏移量递增，从而形成唯一的物理地址空间。
-- **ConsumeQueue**：每个 Queue 对应一个索引文件，每条记录 20 字节（CommitLog offset + size + tagCode）。消费者先读 ConsumeQueue，再定位到 CommitLog 读取完整消息。
+    - 【补充】：每个 CommitLog 文件默认大小为 1GB，文件名长度为 20 位，由该文件的起始物理偏移量左补零生成（如 `00000000000000000000` 表示第一个文件）。新文件的文件名基于上一个文件的结束偏移量递增，从而形成唯一的物理地址空间。
+- **ConsumeQueue**：每个 Queue 对应一个索引文件，**每条记录严格为 20 字节，组成为：`CommitLog Offset (8字节 Long)` + `Message Size (4字节 Int)` + `Tag HashCode (8字节 Long)`**。这里存储的是 Tag 字符串的 HashCode 而非原始 Tag，这也是消费端拉取后需要进行“二次精确过滤”对比真实 Tag 字符串的原因。消费者先读 ConsumeQueue，再定位到 CommitLog 读取完整消息。
 - **IndexFile**：按消息 Key 哈希索引，采用链地址法解决哈希冲突。文件结构：IndexHeader（40 字节）+ 哈希槽（默认 500 万槽，每槽 4 字节）+ 索引条目链表（按插入顺序排列，无红黑树）。检索时需遍历冲突链，时间复杂度 O(n)。
 
 ### 3.2 零拷贝与刷盘
 
-**零拷贝实现**：
+**零拷贝实现：**
 
 - **写入/刷盘**：使用 `mmap`（内存映射文件），将文件地址映射到用户态地址空间，实现高性能顺序写入。
-- **消息消费（拉取）**：动态选择。小数据量（通常 < 128KB）使用 `mmap + write` 组合（性能优于 `sendfile`）；**大数据量则会自动切换为 `FileChannel.transferTo()`（即 `sendfile`），以最大化网络传输效率**。
-- **主从复制**：**主要使用 `FileChannel.transferTo()`，其在 Linux 底层对应 `sendfile` 系统调用，专为大文件网络传输优化，效率远高于 `mmap + write`**。
+- **消息消费（拉取）**：**【修正】RocketMQ 消费拉取消息时，默认是不使用 `sendfile` 的**。源码中由 `transferMsgByHeap` 参数控制（默认为 `true`），即默认会将消息从 PageCache 读入 JVM 堆内存（Heap），再由堆内存通过 Socket 发送（`mmap read -> heap -> socket write`）。**只有在显式配置 `transferMsgByHeap=false` 时，才会触发基于 `FileChannel.transferTo` (sendfile) 的零拷贝传输**。
+- **主从复制**：主要使用 `FileChannel.transferTo()`，其在 Linux 底层对应 `sendfile` 系统调用，专为大文件网络传输优化，效率远高于 `mmap + write`。
 
-**刷盘策略**：
+**刷盘策略：**
 
 - **异步刷盘（`ASYNC_FLUSH`）**：写入 PageCache 即返回，高性能但断电可能丢失（操作系统崩溃或断电时 PageCache 中未调用 `fsync` 的数据会丢失）。
 - **同步刷盘（`SYNC_FLUSH`）**：等待落盘确认，保证可靠性。
@@ -63,10 +65,10 @@
 ### 3.3 主从复制
 
 |概念|配置参数|含义|
-|:--|:--|:--|
+|---|---|---|
 |同步刷盘|`flushDiskType = SYNC_FLUSH`|主节点等待消息落盘后才返回|
 |同步复制|`brokerRole = SYNC_MASTER`|主节点等待从节点同步完成后才返回|
-|同步刷盘超时|`flushTimeout = 5000` （毫秒）|RocketMQ 5.2.0+ 推荐使用 `flushTimeout`，旧参数 `syncFlushTimeout` 已标记为 `@Deprecated` 但向后兼容。**注意：该超时仅对同步刷盘 (`SYNC_FLUSH`) 有效。在异步刷盘模式下不等待落盘，因此不存在此超时概念。**|
+|同步刷盘超时|`syncFlushTimeout = 5000`（毫秒）|**【修正】在 Apache 官方主线源码中，同步刷盘超时参数标准名称一直为 `syncFlushTimeout`（默认 5000ms）。** 注意：该超时仅对同步刷盘 (`SYNC_FLUSH`) 有效。在异步刷盘模式下不等待落盘，因此不存在此超时概念。|
 
 - 官方推荐生产环境配置：异步刷盘 + 同步复制，兼顾性能与可靠性。
 - 同步复制（`SYNC_MASTER`）：等待从节点确认，可结合同步刷盘实现零丢失。注意：零丢失还需生产者同步发送并正确处理返回结果。
@@ -85,24 +87,23 @@
 
 - **借阅‑确认机制**：消费者拉取消息时，Broker 将消息“借出”并设置 `invisibleTime`（不可见时间）。在此期间消息对其他消费者不可见。
 - **Checkpoint + BitMap**：Broker 为每次拉取生成快照（PopCheckPoint），记录起始 Offset 和 BitMap（每位代表一条消息的 ACK 状态）。
-    - _【修正】_：Checkpoint 持久化到 `RMQ_SYS_REVIVE_TOPIC`（对应 `MixAll.REVIVE_TOPIC`），而非 ReviveTopic（早期别名已不再使用）。
+    - 【修正】：Checkpoint 持久化到 `RMQ_SYS_REVIVE_TOPIC`（对应 `MixAll.REVIVE_TOPIC`），而非 ReviveTopic（早期别名已不再使用）。
 - **位点推进算法**：Broker 维护期望下一个连续位点（`expectedOffset`）。仅当从该位点开始的连续消息都被 ACK（BitMap 中对应位为 1）时，才将消费进度推进到最后一条连续消息之后。
 
-#### 4.2.2 乱序 ACK 处理示例
+#### 4.2.2 乱序 ACK 处理与超时强制推进示例
 
-1. 拉取 Offset 1,2,3 → BitMap=[0,0,0], expectedOffset=1
-2. 收到 ACK(3) → BitMap=[0,0,1], expectedOffset 仍为 1（缺口存在）
-3. 收到 ACK(2) → BitMap=[0,1,1], 仍不推进
-4. 收到 ACK(1) → BitMap=[1,1,1], expectedOffset 推进到 4，持久化进度
+- 拉取 Offset 1,2,3 → BitMap=[0,0,0], expectedOffset=1
+- 收到 ACK(3) → BitMap=[0,0,1], expectedOffset 仍为 1（缺口存在）
+- 收到 ACK(2) → BitMap=[0,1,1], 仍不推进
+- 收到 ACK(1) → BitMap=[1,1,1], expectedOffset 推进到 4，持久化进度
+- **【补充】超时强制推进机制**：若 Offset 1 的消息一直未 ACK，直到 `invisibleTime` 超时，Revive 线程会将其重新投递到重试队列。此时原 CheckPoint 的 BitMap 会被强制标记或推进，**不会**因为一条消息不 ACK 而导致整个队列永久死锁。
 
 #### 4.2.3 超时与重试
 
-若消息在 `invisibleTime` 内未收到 ACK，Broker 会跳过该消息，将连续位点推进（前提是后续消息已确认），**未确认消息首先被 `ReviveService` 投递到 Revive Topic（`rmq_sys_revive_topic`）中进行延迟调度处理；仅当 Revive 流程判定该消息确实需要重试时，才会最终转入重试队列（`%RETRY%{ConsumerGroup}`）**，进入下一轮 POP 流程。为提高吞吐，多个 CheckPoint 会被打散到多个 Revive Queue 中轮询处理。
-
-**重试次数差异**：
-
-- **普通消息（并发消费）**：`maxReconsumeTimes` 默认值为 `-1`，其效果等同于最多重试 16 次。若设置为其他正整数则按该值重试。
-- **顺序消息**：无限重试（阻塞式），直到消费成功。**默认重试间隔为 1 秒，但可通过 `consumer.setSuspendCurrentQueueTimeMillis(int)` 进行配置调整**，不会进入死信队列。
+- 若消息在 `invisibleTime` 内未收到 ACK，Broker 会跳过该消息，将连续位点推进（前提是后续消息已确认），未确认消息首先被 `ReviveService` 投递到 Revive Topic（`rmq_sys_revive_topic`）中进行延迟调度处理；仅当 Revive 流程判定该消息确实需要重试时，才会最终转入重试队列（`%RETRY%{ConsumerGroup}`），进入下一轮 POP 流程。为提高吞吐，多个 CheckPoint 会被打散到多个 Revive Queue 中轮询处理。
+- **重试次数差异**：
+    - 普通消息（并发消费）：**【修正】`maxReconsumeTimes` 在 4.x/5.x 源码中的默认值直接就是 `16`**。若设置为其他正整数则按该值重试。
+    - 顺序消息：无限重试（阻塞式），直到消费成功。默认重试间隔为 1 秒，但可通过 `consumer.setSuspendCurrentQueueTimeMillis(int)` 进行配置调整，不会进入死信队列。
 - 达到最大重试次数后进入死信队列（DLQ），命名规则：`%DLQ%{ConsumerGroup}`。
 - **动态续租**：消费者可通过 `changeInvisibleTime` 延长正在处理的消息的不可见时间。
 
@@ -113,7 +114,7 @@
     - 消费组级别默认值：`popInvisibleTime`（服务端配置），服务端默认值为 30 秒。
     - 请求级别覆盖：拉取请求中设置。
     - 动态续租：`changeInvisibleTime`。
-    - **【增强补充】硬性上限保护**：`invisibleTime` 受 Broker 端 `popMaxInvisibleTime` 参数限制（默认 12 小时，5.3.0+ 可配置）。若客户端设置的值超出该上限，Broker 会静默截断为最大值，不会返回错误，业务侧需注意避免因不可见时间过长导致 Revive 队列积压。
+    - 【增强补充】**硬性上限保护**：`invisibleTime` 受 Broker 端 `popMaxInvisibleTime` 参数限制（默认 12 小时，5.3.0+ 可配置）。若客户端设置的值超出该上限，Broker 会静默截断为最大值，不会返回错误，业务侧需注意避免因不可见时间过长导致 Revive 队列积压。
 
 #### 4.2.5 POP 模式优势
 
@@ -126,7 +127,7 @@
 - **不适用于顺序消息**：POP 模式的 BitMap 推进算法天然会破坏单队列的消息顺序，不能保证顺序性。社区尚未正式支持 POP 模式下的顺序消费，若业务需要严格顺序，请使用传统模式或 Lite 模式的单队列顺序消费。
 - **订阅关系一致**：POP 模式下，同一消费组内的订阅关系仍必须一致（包括 Tag 表达式）。
 - **协议兼容性**：POP 模式核心逻辑在存算分离架构中由 Proxy 处理，在一体化架构中由 Broker 处理。4.x Remoting 客户端无法直接利用 POP 并发特性，Broker 会按传统队列锁定模式处理其请求。
-- _补充_：RocketMQ 5.3.2+ 引入 RIP-73（RocksDB 增强的 POP 消费），用 RocksDB KV 存储替代基于延迟消息的 Pop 状态管理，降低锁竞争并提升吞吐。该特性当前为 Alpha 阶段，建议充分验证后用于生产。
+- **补充**：RocketMQ 5.3.2+ 引入 RIP-73（RocksDB 增强的 POP 消费），用 RocksDB KV 存储替代基于延迟消息的 Pop 状态管理，降低锁竞争并提升吞吐。该特性当前为 Alpha 阶段，建议充分验证后用于生产。
 
 ## 五、定时/延迟消息演进（4.x → 5.x）
 
@@ -142,8 +143,8 @@
     - `TimerLog`：顺序追加的索引文件，记录消息元数据（CommitLog 偏移、投递时间、前驱指针等）。
     - `TimerWheel`：环形数组，每个槽位存储该秒最后一条消息在 TimerLog 中的偏移量，用于快速定位到期消息。
 - **工作流程**：
-    1. `TimerEnqueuePutService` 将定时消息元数据写入 TimerLog，更新时间轮槽位。
-    2. `TimerDequeueGetService` 每秒推进时间轮，从 TimerLog 反向链表收集到期消息，从 CommitLog 读取完整消息并投递到目标 Topic。
+    - `TimerEnqueuePutService` 将定时消息元数据写入 TimerLog，更新时间轮槽位。
+    - `TimerDequeueGetService` 每秒推进时间轮，从 TimerLog 反向链表收集到期消息，从 CommitLog 读取完整消息并投递到目标 Topic。
 - **RocksDB 引擎选项**（`timerRocksDBEnable=false` 默认关闭）：
     - 使用 RocksDB 存储时间轮槽位映射，支持更大时间跨度和删除语义（如消息取消），但可能有尾延迟。
     - 此时 `TimerWheel` 不再写入新数据，但仍被构造以兼容。
@@ -151,12 +152,12 @@
 ### 5.3 消息大小限制（官方明确）
 
 - **事务消息和定时/延时消息**：消息体最大 64KB。此外，所有消息的自定义属性总和不得超过 16KB，这意味着事务消息的实际有效负载（消息体 + 属性）可能因属性占用而低于 64KB。
-- **普通消息和顺序消息**：**整个消息的序列化总大小（包含 Topic、Body、Properties 等所有元数据，而不仅仅是消息体）最大默认为 4MB**。客户端可通过 `setMaxMessageSize` 调整，但需同步修改 Broker 端的 `maxMessageSize` 参数。
+- **普通消息和顺序消息**：整个消息的序列化总大小（包含 Topic、Body、Properties 等所有元数据，而不仅仅是消息体）最大默认为 4MB。客户端可通过 `setMaxMessageSize` 调整，但需同步修改 Broker 端的 `maxMessageSize` 参数。
 - **自定义属性**：所有消息的自定义属性总和不得超过 16KB，超过会触发消息过大异常。
 
 ## 六、Lite 模式：海量队列的解决方案
 
-**版本说明**：Lite Mode（RIP-83）正式引入是在 **RocketMQ 5.5.0（2024 年发布）**，专门为 AI 场景设计。
+**版本说明**：Lite Mode（RIP-83）正式引入是在 RocketMQ 5.5.0（2024 年发布），专门为 AI 场景设计。
 
 ### 6.1 为什么普通 RocketMQ 不支持海量 Queue？
 
@@ -173,8 +174,8 @@
 
 #### 6.2.2 存储实现：RocksDB 替代 ConsumeQueue
 
-- **元数据**（LiteTopic 的定义、属性、消费位点等）存储在 RocksDB 中，不再使用传统的 ConsumeQueue 文件。
-- **消息体**（Payload）仍然存储在 CommitLog 中，保持顺序写的高性能。
+- 元数据（LiteTopic 的定义、属性、消费位点等）存储在 RocksDB 中，不再使用传统的 ConsumeQueue 文件。
+- 消息体（Payload）仍然存储在 CommitLog 中，保持顺序写的高性能。
 - RocksDB 存储路径可通过 `rocksdbStorePathRoot` 定制（5.5.0+）。
 
 #### 6.2.3 RocksDB 在不同节点间的同步机制
@@ -212,8 +213,8 @@
 ### 7.2 存算分离后的职责划分
 
 |层|组件|职责|
-|:--|:--|:--|
-|**计算层**|Proxy|**无状态** ，处理协议适配（gRPC/Remoting/MQTT）、POP 消费处理、负载均衡、权限校验、客户端连接管理|
+|---|---|---|
+|**计算层**|Proxy|无状态，处理协议适配（gRPC/Remoting/MQTT）、POP 消费处理、负载均衡、权限校验、客户端连接管理|
 |**存储层**|Broker|管理 CommitLog、ConsumeQueue、RocksDB（Lite 模式），支持主从复制和 Controller 选主|
 
 ### 7.3 优势
@@ -233,19 +234,23 @@
 ### 8.2 Broker 高可用演进
 
 |版本|方案|选主能力|
-|:--|:--|:--|
+|---|---|---|
 |4.x|Master‑Slave，同步/异步复制|手动切换|
-|**4.4.0+**|DLedger（基于 Raft）|自动选举，但有 IO 串行化问题|
-|5.0+|Controller 模式 （独立或嵌入 NameServer）|基于 Raft 管理元数据，避免 DLedger 开销|
+|4.4.0+|DLedger（基于 Raft）|自动选举，但有 IO 串行化问题|
+|5.0+|Controller 模式（独立或嵌入 NameServer）|基于 Raft 管理元数据，避免 DLedger 开销|
 
-**Controller 的两种部署方式**：
+**Controller 的两种部署方式：**
 
-1. **嵌入 NameServer**：通过 `enableControllerInNamesrv=true` 开启，适合轻量部署。
-2. **独立部署**：单独部署 Controller 集群，NameServer 仍负责路由发现。
-
+- **嵌入 NameServer**：通过 `enableControllerInNamesrv=true` 开启，适合轻量部署。
+    
+- **独立部署**：单独部署 Controller 集群，NameServer 仍负责路由发现。
+    
 - `enableElectUncleanMaster=false`（默认）：防止脏副本被选为主，避免数据丢失。
+    
 - Controller 模式默认关闭：`enableControllerMode=false`。若启用，需至少 3 个 Controller 节点（或嵌入 NameServer 的实例）以保证 Raft 多数派。
+    
 - `syncBrokerMetadataPeriod`：该参数用于 Controller 模式下 Broker 向 Controller 上报元数据的心跳间隔，与 Lite 模式的 RocksDB 元数据复制无关。默认值可查阅官方文档配置表。
+    
 
 ### 8.3 数据零丢失充要条件
 
@@ -262,16 +267,16 @@
 
 ### 9.1 两阶段提交 + 事务回查
 
-RocketMQ 事务消息通过两阶段提交和事务回查机制保证分布式事务最终一致性。  
-**工作流程**：
+RocketMQ 事务消息通过两阶段提交和事务回查机制保证分布式事务最终一致性。工作流程：
 
 1. 生产者发送半消息（Half Message）到 Broker。
-2. Broker 存储半消息，状态设为 `UNKNOWN`（对消费者不可见）。
+2. **【深度修正】Broker 存储半消息的底层机制**：Broker 并不是简单地给消息打个 `UNKNOWN` 标签，而是**将半消息的物理存储位置转移到了系统内部的 `RMQ_SYS_TRANS_HALF_TOPIC`（半消息 Topic）中**，并将原目标 Topic 替换掉。消费者订阅的是原 Topic，因此天然不可见。当 Commit/Rollback 时，Broker 会写入 OP 消息到 `RMQ_SYS_TRANS_OP_HALF_TOPIC` 来标记该半消息的最终状态。
 3. 生产者执行本地事务。
 4. 生产者根据本地事务结果向 Broker 提交（Commit）或回滚（Rollback）。
 5. 若生产者未及时发送二次确认，Broker 会定期回查生产者的事务状态（通过 `checkLocalTransaction` 接口）。
+6. **【严重事实修正】超过回查次数的去向**：默认最多回查 15 次（可通过 `transactionCheckMax` 配置）。当回查次数超过限制且状态仍为 `UNKNOW` 时，Broker 的默认行为是**直接丢弃该半消息（Discard）**，并打印 `Check prepared transaction message... discard` 的警告日志。**RocketMQ 中根本不存在所谓的事务死信队列 `%DLQ%{ProducerGroup}`**（死信队列 `%DLQ%` 仅存在于消费侧重试失败的场景）。这也是为什么生产环境要求业务方必须做好本地事务状态持久化，或者通过自定义 `TransactionCheckListener` 拦截并做告警补偿的原因。
 
-默认最多回查 15 次（可通过 `transactionCheckMax` 配置）。**超过回查次数后，Broker 不会简单丢弃消息，而是会强制将该半消息投递到事务死信队列 `%DLQ%{ProducerGroup}`，并打印错误日志。** 在 RocketMQ 4.x/5.x 中，事务回查是通过生产者端实现 **`TransactionListener`** 接口的 `checkLocalTransaction` 方法完成的（注：`AbstractTransactionCheckListener` 是 3.x 及更早版本的过时 API，现已废弃）。
+在 RocketMQ 4.x/5.x 中，事务回查是通过生产者端实现 `TransactionListener` 接口的 `checkLocalTransaction` 方法完成的（注：`AbstractTransactionCheckListener` 是 3.x 及更早版本的过时 API，现已废弃）。
 
 ### 9.2 代码示例
 
@@ -300,8 +305,8 @@ producer.sendMessageInTransaction(msg, null);
 ### 9.3 限制与风险
 
 - 最大消息体 64KB，且自定义属性总和不得超过 16KB。
-- **禁止与 `transientStorePoolEnable=true` 同时使用**：开启堆外内存池会与事务消息机制冲突，导致 100% 触发回查。根本原因是 `transientStorePoolEnable=true` 时，消息先写入堆外内存池再异步刷入 PageCache，而事务消息的半消息（Half Message）必须在可靠落盘后才能被回查线程识别。若在半消息处于内存缓冲阶段时 Broker 宕机，Half 消息可能物理丢失，导致回查时 `Find prepared transaction message failed` 错误并无限重试；即使完成提交，堆外内存到 PageCache 的写入延迟也可能导致其状态不被及时记录。
-- **消息类型校验机制**：若要发送事务消息，目标 Topic 的 `messageType` 必须声明为 `TRANSACTION`。**注意：只有当 Broker 显式开启 `enableTopicMessageTypeCheck=true`（默认值为 `false`）时，Broker 才会强制校验类型是否匹配**。若未开启该校验，事务消息仍可正常发送（向下兼容 4.x 行为）；若开启且不匹配，则发送失败。
+- **禁止与 `transientStorePoolEnable=true` 同时使用**：开启堆外内存池会与事务消息机制冲突，导致 100% 触发回查。**【修正】根本原因**：事务回查线程（`TransactionalMessageCheckService`）在扫描半消息状态时，是直接从 CommitLog（或 PageCache）中读取的。如果开启堆外内存池，消息还在 DirectByteBuffer 中未刷入 PageCache/CommitLog，回查线程去 CommitLog 里找这条半消息的 Commit/Rollback 标记（OP消息）时，会找不到对应的物理偏移量，导致回查逻辑直接失效或误判。若在半消息处于内存缓冲阶段时 Broker 宕机，Half 消息可能物理丢失，导致回查时报错并无限重试。
+- **消息类型校验机制**：若要发送事务消息，目标 Topic 的 `messageType` 必须声明为 `TRANSACTION`。注意：只有当 Broker 显式开启 `enableTopicMessageTypeCheck=true`（默认值为 `false`）时，Broker 才会强制校验类型是否匹配。若未开启该校验，事务消息仍可正常发送（向下兼容 4.x 行为）；若开启且不匹配，则发送失败。
 - 事务消息会额外占用内存和磁盘（半消息 + 回查队列），高事务吞吐场景需评估资源开销。
 
 ## 十、生产问题分类与解决办法（浓缩版）
@@ -317,7 +322,7 @@ producer.sendMessageInTransaction(msg, null);
 ### 10.2 消息丢失
 
 - 按上述“数据零丢失充要条件”配置。
-- 若已发生，检查各环节配置和日志，尤其关注 异步刷盘 在断电场景下的丢失风险。
+- 若已发生，检查各环节配置和日志，尤其关注异步刷盘在断电场景下的丢失风险。
 
 ### 10.3 消息重复（幂等）
 
@@ -340,20 +345,20 @@ producer.sendMessageInTransaction(msg, null);
 
 ### 10.6 单向消息的风险补充
 
-_【补充】_：原文已警告“严禁使用单向消息”。此外，在 Broker 触发限流（如磁盘写满、队列溢出）时，单向消息会被 Broker 静默丢弃且无返回码，生产者完全无法感知——此时日志中无相关 ERROR 记录。对于监控场景，建议使用 异步发送（`sendAsync`）并至少记录失败回调，以便追踪潜在故障。
+【补充】：原文已警告“严禁使用单向消息”。此外，在 Broker 触发限流（如磁盘写满、队列溢出）时，单向消息会被 Broker 静默丢弃且无返回码，生产者完全无法感知——此时日志中无相关 ERROR 记录。对于监控场景，建议使用异步发送（`sendAsync`）并至少记录失败回调，以便追踪潜在故障。
 
 ### 10.7 订阅关系不一致的深层剖析与解决方案
 
 #### 10.7.1 为什么订阅关系不一致会导致问题？
 
-- **Broker 端订阅信息覆盖**：Broker 以 `ConsumerGroup` 为维度存储订阅关系。当组内不同消费者发送心跳时，后者的订阅数据会覆盖前者。例如：
+- **Broker 端订阅信息震荡覆盖**：Broker 以 `ConsumerGroup` 为维度存储订阅关系。当组内不同消费者发送心跳时，后者的订阅数据会覆盖前者。例如：
     - C1 注册 `TopicA` Tag=`PAID`，Broker 记录 `TopicA->PAID`。
     - C2 注册 `TopicA` Tag=`SHIPPED`，Broker 更新记录为 `TopicA->SHIPPED`。
-    - 此后所有消费者拉取 `TopicA` 时，Broker 都只返回 Tag=`SHIPPED` 的消息。
+    - 随着心跳交替，Broker 端的订阅关系不断翻转，导致消费 TPS 剧烈抖动。
 - **结果**：
-    - **Tag 不同**：订阅 Tag 被覆盖后，部分消费者拉取到不匹配自己订阅 Tag 的消息，客户端会静默丢弃这些消息并返回 `CONSUME_SUCCESS`，导致业务数据丢失。
-    - **Topic 不同**：若 C1 订阅 `TopicA`、C2 订阅 `TopicB`，后注册的消费者覆盖订阅表后，前者的拉取请求会被 Broker 拒绝（日志：`the consumer's subscription not exist`），导致消费停滞。
-- **注意**：订阅不一致不会导致消费者“卡死”（即无限等待），但会引起更隐蔽的消息丢失和消费中断。
+    - **Tag 不同**：部分消费者拉取到不匹配自己订阅 Tag 的消息，客户端会静默丢弃这些消息并返回 `CONSUME_SUCCESS`，导致业务数据丢失。
+    - **Topic 不同**：若 C1 订阅 `TopicA`、C2 订阅 `TopicB`，覆盖后前者的拉取请求会被 Broker 拒绝（日志：`the consumer's subscription not exist`），导致消费停滞。
+- 注意：订阅不一致不会导致消费者“卡死”（即无限等待），但会引起更隐蔽的消息丢失和消费中断。
 
 #### 10.7.2 最佳实践建议
 
@@ -364,10 +369,10 @@ _【补充】_：原文已警告“严禁使用单向消息”。此外，在 Br
 ## 十一、核心算法总结
 
 |领域|算法/思想|作用|
-|:--|:--|:--|
+|---|---|---|
 |存储|顺序写 + 索引分离|突破磁盘随机 IO 瓶颈|
 |存储|零拷贝（mmap + sendfile）|减少 CPU 拷贝|
-|网络|长轮询（Long Polling）|兼顾实时性和服务端压力；默认超时由 `brokerSuspendMaxTimeMillis` 控制，通常为 15～30 秒|
+|网络|长轮询（Long Polling）|兼顾实时性和服务端压力；默认超时由 `brokerSuspendMaxTimeMillis` 控制，**严格默认值为 20000 毫秒（20秒）**，客户端请求超时若大于此值会被服务端强制截断。|
 |服务发现|NameServer AP 去中心化|极简，避免 ZooKeeper 复杂性|
 |同步复制|Raft（DLedger / Controller）|主自动选举 + 多数派提交|
 |调度|时间轮（TimerWheel + TimerLog）|精确秒级定时消息，基于文件|
@@ -381,7 +386,7 @@ _【补充】_：原文已警告“严禁使用单向消息”。此外，在 Br
 ### 12.1 调优目标与场景匹配
 
 |调优目标|适用场景|核心关注指标|优先级侧重|
-|:--|:--|:--|:--|
+|---|---|---|---|
 |高吞吐|日志采集、批量任务、埋点上报|TPS|异步刷盘 + 批量发送 + 消费者批量消费|
 |低延迟|订单、支付、实时通知|RT (p99/p999)|同步复制 + 内存优化 + 减少 GC|
 |高可用|金融、电商核心链路|数据零丢失|同步刷盘 + 同步复制 + Controller 自动切换|
@@ -390,8 +395,8 @@ _【补充】_：原文已警告“严禁使用单向消息”。此外，在 Br
 ### 12.2 硬件选型指南
 
 |资源|推荐配置|说明|
-|:--|:--|:--|
-|CPU|16-32 核（如 AMD EPYC 7313）|关闭 NUMA 平衡服务（ `numa_balancing=0` ）|
+|---|---|---|
+|CPU|16-32 核（如 AMD EPYC 7313）|关闭 NUMA 平衡服务（`numa_balancing=0`）|
 |内存|总内存 32-64 GB，堆内存占 50%|PageCache 至少 16 GB|
 |磁盘|CommitLog: NVMe SSD (RAID10)；ConsumeQueue: SATA SSD|严禁使用 HDD 和 RAID5|
 |网络|10 Gbps - 25 Gbps|配合 RDMA 可降低延迟|
@@ -417,6 +422,10 @@ echo none > /sys/block/nvme0n1/queue/scheduler
 
 ### 12.4 JVM 参数调优（8C16G+ 机器）
 
+**【修正】按 JDK 版本分类提供 GC 日志参数，避免 JDK 9+ 启动报错：**
+
+**JDK 8 环境：**
+
 ```bash
 # bin/runbroker.sh - 使用 G1 回收器（推荐）
 JAVA_OPT="${JAVA_OPT} -server -Xms8g -Xmx8g"
@@ -428,7 +437,19 @@ JAVA_OPT="${JAVA_OPT} -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTim
 JAVA_OPT="${JAVA_OPT} -Xloggc:~/logs/rocketmqlogs/gc.log -verbose:gc"
 ```
 
-_说明_：G1 是自适应垃圾回收器，不应同时设置 `-Xmn` 固定年轻代大小。生产环境强烈建议使用 G1 或 ZGC（JDK 11+）。
+**JDK 11 / JDK 17 环境（使用统一日志框架）：**
+
+```bash
+JAVA_OPT="${JAVA_OPT} -server -Xms8g -Xmx8g"
+JAVA_OPT="${JAVA_OPT} -XX:+UseG1GC -XX:MaxGCPauseMillis=100"
+JAVA_OPT="${JAVA_OPT} -XX:G1HeapRegionSize=16m -XX:G1ReservePercent=25"
+JAVA_OPT="${JAVA_OPT} -XX:InitiatingHeapOccupancyPercent=30 -XX:SoftRefLRUPolicyMSPerMB=0"
+JAVA_OPT="${JAVA_OPT} -XX:-UseBiasedLocking -XX:+DisableExplicitGC"
+# JDK 9+ 必须使用 -Xlog 替代废弃的 -XX:+PrintGCDetails
+JAVA_OPT="${JAVA_OPT} -Xlog:gc*:file=~/logs/rocketmqlogs/gc.log:time,uptime,level,tags:filecount=5,filesize=50m"
+```
+
+**说明**：G1 是自适应垃圾回收器，不应同时设置 `-Xmn` 固定年轻代大小。生产环境强烈建议使用 G1 或 ZGC（JDK 11+）。
 
 ### 12.5 Broker 核心配置调优
 
@@ -446,7 +467,7 @@ transientStorePoolEnable = false
 
 flushDiskType = ASYNC_FLUSH   # 高吞吐；高可用用 SYNC_FLUSH
 flushInterval = 1000           # 仅异步刷盘模式生效
-flushTimeout = 5000            # 同步刷盘超时（毫秒），RocketMQ 5.2.0+ 推荐使用此参数（仅对同步刷盘有效）
+syncFlushTimeout = 5000        # 【修正】同步刷盘超时（毫秒），官方主线标准参数名为 syncFlushTimeout（仅对同步刷盘有效）
 
 # 复制
 brokerRole = ASYNC_MASTER     # 高吞吐；高可用用 SYNC_MASTER
@@ -470,7 +491,7 @@ slaveReadEnable = false
 
 ### 12.6 客户端调优
 
-**生产者**（4.x/Remoting 风格，5.x 类似）：
+**生产者（4.x/Remoting 风格，5.x 类似）：**
 
 ```java
 producer.setSendMsgTimeout(5000);
@@ -479,9 +500,9 @@ producer.setRetryTimesWhenSendFailed(2);
 producer.setSendLatencyFaultEnable(true);
 ```
 
-- `sendLatencyFaultEnable` 开启后，Producer 会记录发送耗时并基于延迟分级隔离动态计算 Broker 规避时长（如耗时 550ms 隔离 30s，1000ms 隔离 60s），避免慢节点被持续选中。
+`sendLatencyFaultEnable` 开启后，Producer 会记录发送耗时并基于延迟分级隔离动态计算 Broker 规避时长（如耗时 550ms 隔离 30s，1000ms 隔离 60s），避免慢节点被持续选中。
 
-**消费者**（以下为 4.x/Remoting 风格示例；5.x gRPC SimpleConsumer 的线程模型由框架管理）：
+**消费者（以下为 4.x/Remoting 风格示例；5.x gRPC SimpleConsumer 的线程模型由框架管理）：**
 
 ```java
 // 4.x PushConsumer 示例
@@ -491,24 +512,24 @@ consumer.setConsumeMessageBatchMaxSize(32);
 consumer.setPullBatchSize(32);
 consumer.setConsumeTimeout(15);   // 单位：分钟，默认15分钟
 // 顺序消息挂起时间配置（默认 1000ms）
-consumer.setSuspendCurrentQueueTimeMillis(1000); 
+consumer.setSuspendCurrentQueueTimeMillis(1000);
 ```
 
 ### 12.7 场景配置速查
 
 |场景|JVM 堆|刷盘|复制|线程池|客户端批量|
-|:--|:--|:--|:--|:--|:--|
+|---|---|---|---|---|---|
 |日志采集|8-16 GB|ASYNC|ASYNC|48-64|高并发送（建议大批量、异步）|
 |支付/交易|16-32 GB|SYNC|SYNC|16-32|1-8|
 |电商订单|16 GB|ASYNC|SYNC|32|32|
 |金融核心|32 GB|SYNC|SYNC + Controller|16-24|1-16|
 
-_支付场景注意_：同步刷盘 + 同步复制能保证零丢失，但延迟会显著增加（从微秒级到毫秒级）。若要求 p99 < 10ms，可考虑异步刷盘 + 同步复制 + 定期 fsync 的折中方案。
+**支付场景注意**：同步刷盘 + 同步复制能保证零丢失，但延迟会显著增加（从微秒级到毫秒级）。若要求 p99 < 10ms，可考虑异步刷盘 + 同步复制 + 定期 fsync 的折中方案。
 
 ### 12.8 调优验证指标
 
 |指标|健康阈值|
-|:--|:--|
+|---|---|
 |Full GC 频率|< 1 次/小时|
 |消息积压|< 10 万条|
 |发送 p99 RT|< 200 ms|
@@ -535,16 +556,15 @@ _支付场景注意_：同步刷盘 + 同步复制能保证零丢失，但延迟
 ### 13.3 关键日志文件
 
 |日志文件|说明|
-|:--|:--|
+|---|---|
 |`broker.log`|Broker 运行日志，用于排查服务端问题|
 |`storeerror.log`|存储层错误日志（如磁盘满、刷盘失败）|
 |`rocketmq_client.log`|客户端（生产者/消费者）运行日志|
 
 ### 13.4 多语言生态（gRPC 客户端）
 
-RocketMQ 5.x 主推 gRPC 协议客户端，基于 HTTP/2 + Protobuf，支持 Java, C++, C#, Go, Rust, Python, Node.js, PHP 等主流语言。该协议在 5.0 版本全新推出。
-
-- _【补充】_：不同语言 SDK 的成熟度存在差异，Java 和 Go 较为成熟，Rust 和 PHP 等语言的支持可能还在早期阶段。在使用非 Java 语言前，建议查阅对应语言的官方文档或社区公告，确认当前的稳定性和功能支持范围。
+- RocketMQ 5.x 主推 gRPC 协议客户端，基于 HTTP/2 + Protobuf，支持 Java, C++, C#, Go, Rust, Python, Node.js, PHP 等主流语言。该协议在 5.0 版本全新推出。
+- 【补充】：不同语言 SDK 的成熟度存在差异，Java 和 Go 较为成熟，Rust 和 PHP 等语言的支持可能还在早期阶段。在使用非 Java 语言前，建议查阅对应语言的官方文档或社区公告，确认当前的稳定性和功能支持范围。
 - **轻量级 SimpleConsumer API**：5.x gRPC 客户端提供无状态消费接口，将重试、负载均衡、位点管理等职责移至服务端（Proxy/Broker），简化多语言实现。
 - **广播模式限制**：新一代 gRPC 客户端不再支持广播消费模式。若需广播语义，请使用 5.x Remoting Java SDK，或为每个消费者创建独立的 ConsumerGroup 模拟广播。
 - **协议适配网关**：Proxy 组件支持将 RocketMQ 协议转换为 MQTT、AMQP 等，实现异构系统互通。
@@ -554,7 +574,7 @@ RocketMQ 5.x 主推 gRPC 协议客户端，基于 HTTP/2 + Protobuf，支持 Jav
 - **ACL 权限控制**：通过 `plain_acl.yml` 文件配置，在 `broker.conf` 中设置 `aclEnable=true` 开启。支持 ACL 2.0（基于属性的访问控制 ABAC），于 RocketMQ 5.3.0 引入。
 - **重要版本变更**：ACL 1.0 自 5.3.3 版本开始被彻底移除。若使用 5.3.0+ 版本，请尽快迁移至 ACL 2.0 配置。
 - **认证与授权**：通过 AccessKey/SecretKey 进行签名认证，根据配置文件进行权限校验。
-- **消息类型强制校验** ： `enableTopicMessageTypeCheck` 默认值为 `false` （5.x 起）。开启后（设为 `true` ），Broker 会校验生产者发送的消息类型（普通、顺序、事务、定时/延时）是否与 Topic 初始化时声明的类型一致。顺序消息要求 Topic 的 `messageType` 包含 `FIFO` ；事务消息要求包含 `TRANSACTION` 。默认关闭是为了向下兼容 4.x 版本行为（允许一个 Topic 混用多种消息类型），**生产环境建议显式开启**以增强类型安全。
+- **消息类型强制校验**：`enableTopicMessageTypeCheck` 默认值为 `false`（5.x 起）。开启后（设为 `true`），Broker 会校验生产者发送的消息类型（普通、顺序、事务、定时/延时）是否与 Topic 初始化时声明的类型一致。顺序消息要求 Topic 的 `messageType` 包含 `FIFO`；事务消息要求包含 `TRANSACTION`。默认关闭是为了向下兼容 4.x 版本行为（允许一个 Topic 混用多种消息类型），**生产环境建议显式开启**以增强类型安全。
 
 ### 13.6 其他关键功能
 
@@ -563,11 +583,11 @@ RocketMQ 5.x 主推 gRPC 协议客户端，基于 HTTP/2 + Protobuf，支持 Jav
     - 不支持消息重试：若消费失败，不会自动重试，也不会进入死信队列，需业务自行处理失败逻辑。
     - 不支持顺序消息：广播模式下使用 `MessageListenerOrderly` 无法保证顺序且可能导致异常。
     - 仅支持 Java 客户端（Remoting 协议），5.x gRPC 客户端不支持广播模式。
-- **SQL92 表达式过滤** ：支持按消息自定义属性的 SQL92 表达式进行灵活过滤（需 Broker 开启 `enablePropertyFilter=true` ）。
-    - _性能量化_ ：SQL92 过滤需要对每条消息的属性执行表达式解析，其 CPU 开销远高于 Tag 过滤。高吞吐场景（TPS > 10万）下，性能损耗会随表达式复杂度和消息体量急剧增加。为了缓解性能问题，RocketMQ 默认引入了布隆过滤器作为缓存，避免每次请求都执行繁重的 SQL 解析。
-    - _【 修正与补充 】_：**布隆过滤器的特性是“可能存在假阳性（False Positive），但绝不存在假阴性（False Negative）”**。在 RocketMQ 中，这意味着布隆过滤器可能会把**不匹配**的消息误判为**可能匹配**（从而交给 SQL 解析器二次确认，浪费少量 CPU），但**绝对不会**把实际匹配的消息误判为不匹配而跳过，因此绝不会导致数据丢失。建议仅在无法使用 Tag 过滤的复杂场景下使用 SQL92 过滤，且表达式应尽可能简单。
+- **SQL92 表达式过滤**：支持按消息自定义属性的 SQL92 表达式进行灵活过滤（需 Broker 开启 `enablePropertyFilter=true`）。
+    - **性能量化**：SQL92 过滤需要对每条消息的属性执行表达式解析，其 CPU 开销远高于 Tag 过滤。高吞吐场景（TPS > 10万）下，性能损耗会随表达式复杂度和消息体量急剧增加。为了缓解性能问题，RocketMQ 默认引入了布隆过滤器作为缓存，避免每次请求都执行繁重的 SQL 解析。
+    - 【修正与补充】：布隆过滤器的特性是“可能存在假阳性（False Positive），但绝不存在假阴性（False Negative）”。在 RocketMQ 中，这意味着布隆过滤器可能会把不匹配的消息误判为可能匹配（从而交给 SQL 解析器二次确认，浪费少量 CPU），但绝对不会把实际匹配的消息误判为不匹配而跳过，因此绝不会导致数据丢失。建议仅在无法使用 Tag 过滤的复杂场景下使用 SQL92 过滤，且表达式应尽可能简单。
 - **消息查询**：按 Message ID、Message Key 或 Topic 查询消息内容、状态和元数据。
-    - _【补充】_：Message ID 由 Broker 地址和 CommitLog 偏移量编码而成，属于精确匹配，查询效率最高。RocketMQ 在按 Message ID 查询时，直接从 ID 中解析出存储节点的 IP、端口及 CommitLog 偏移量，随后直接读取对应文件消息内容，因此这是最高效的查询路径。
+    - 【修正与补充】：**Message ID 的实际组成是：`Broker IP (4字节) + 端口 (2字节) + CommitLog Offset (8字节) + 时间戳/唯一标识 (4字节)`**（不同版本可能微调，但绝对包含端口和时间戳信息以保证全局唯一性）。属于精确匹配，查询效率最高。RocketMQ 在按 Message ID 查询时，直接从 ID 中解析出存储节点的 IP、端口及 CommitLog 偏移量，随后直接读取对应文件消息内容，因此这是最高效的查询路径。
 
 ### 13.7 分层存储（Tiered Storage）
 
@@ -579,28 +599,28 @@ RocketMQ 5.x 主推 gRPC 协议客户端，基于 HTTP/2 + Protobuf，支持 Jav
     - 目前仅支持单副本，多副本场景需谨慎配置冷存储路径以避免不一致。
     - 冷数据消费存在额外延迟（需回拉）。
     - 与新的高可用架构（Controller 模式）集成尚不完善，可能存在元数据同步问题。
-- _【补充】_：该功能目前为 技术预览（Technical Preview），建议在非核心生产链路中充分测试后再使用，社区未来版本将持续完善此特性。
+- 【补充】：该功能目前为**技术预览（Technical Preview）**，建议在非核心生产链路中充分测试后再使用，社区未来版本将持续完善此特性。
 
 ### 13.8 重试队列与死信队列补充
 
-_【修正与补充】_：重试队列命名为 `%RETRY%{ConsumerGroup}`，死信队列命名为 `%DLQ%{ConsumerGroup}`。**需要特别强调的是，RocketMQ 的重试队列是严格绑定在 ConsumerGroup 维度的。当同一个 ConsumerGroup 订阅多个 Topic 时，系统不会按原始 Topic 分别生成独立的重试队列，而是所有 Topic 的重试消息都会复用同一个 `%RETRY%{ConsumerGroup}` 系统 Topic**，通过消息内部属性（如 `RETRY_TOPIC`）来区分原始 Topic。
+【修正与补充】：重试队列命名为 `%RETRY%{ConsumerGroup}`，死信队列命名为 `%DLQ%{ConsumerGroup}`。需要特别强调的是，RocketMQ 的重试队列是严格绑定在 ConsumerGroup 维度的。当同一个 ConsumerGroup 订阅多个 Topic 时，系统不会按原始 Topic 分别生成独立的重试队列，而是所有 Topic 的重试消息都会复用同一个 `%RETRY%{ConsumerGroup}` 系统 Topic，通过消息内部属性（如 `RETRY_TOPIC`）来区分原始 Topic。
 
 ## 十四、版本差异速览
 
 |特性|4.x|5.x / 5.5.0|
-|:--|:--|:--|
+|---|---|---|
 |定时消息|固定 18 个延迟级别|任意秒级定时（时间轮） + 兼容旧延迟|
 |消费模式|队列粒度（独占队列）|支持 POP 消息粒度（gRPC 客户端）|
 |海量队列|不支持|Lite 模式（RocketMQ 5.5.0 引入，RocksDB 存储元数据）|
 |架构|单体 Broker|存算分离（Proxy + Broker），可选|
 |高可用|手动切换 / DLedger (4.4.0+)|Controller 模式（Raft 选主）|
-|内部调度 Topic|`SCHEDULE_TOPIC_XXXX`|`rmq_sys_wheel_timer` （新定时消息，5.3+ 可自定义）|
+|内部调度 Topic|`SCHEDULE_TOPIC_XXXX`|`rmq_sys_wheel_timer`（新定时消息，5.3+ 可自定义）|
 |多语言支持|仅 Java（Remoting）|gRPC 多语言官方客户端 + SimpleConsumer API（5.0 全新推出）|
 |ACL|1.0（5.3.3 开始移除）|ACL 2.0（5.3.0+）|
-|消息类型强制校验|无|默认关闭（ `enableTopicMessageTypeCheck=false` ），可手动开启|
+|消息类型强制校验|无|默认关闭（`enableTopicMessageTypeCheck=false`），可手动开启|
 |分层存储|不支持|5.1.0+ 技术预览（RIP-57/65）|
 |监控导出器|`rocketmq-exporter`|仍为官方维护，支持 OpenTelemetry 导出|
-|刷盘超时参数|`syncFlushTimeout`|`flushTimeout` （5.2.0+ 推荐，旧参数已弃用但兼容，仅对同步刷盘有效）|
+|刷盘超时参数|`syncFlushTimeout`|**【修正】官方主线标准参数仍为 `syncFlushTimeout`（默认 5000ms），仅对同步刷盘有效**|
 
 ## 十五、总结与费曼自测（含答案）
 
@@ -610,106 +630,106 @@ RocketMQ 通过顺序写 + 索引分离实现高性能存储，通过 POP 模式
 
 ### 15.2 自测问题与参考答案
 
-1. **传统模式下，为什么扩容消费者到一定程度就无效了？POP 模式如何解决？**
-    
-    > **答**：传统模式下，一个 Queue 同一时刻只能被一个消费者独占，消费能力上限 = Topic 的队列数。当消费者数 ≥ 队列数时，新增消费者无法分配到队列，扩容无效。POP 模式采用消息粒度的“借阅-确认”机制，多个消费者可并发拉取同一 Queue 的消息，打破了 1:1 绑定，使扩容始终有效直至触及 CPU/IO 瓶颈。
-    
-2. **POP 模式收到乱序 ACK 时，消费位点如何推进？**
-    
-    > **答**：Broker 维护 `expectedOffset`（期望下一个连续位点）和 BitMap。仅当从 `expectedOffset` 开始的连续消息都被 ACK（BitMap 对应位为 1）时，才将位点推进到最后一条连续消息之后。乱序 ACK 只会更新 BitMap，不会立即推进位点，直到缺口被填补。
-    
-3. **5.x 定时消息中 `SCHEDULE_TOPIC_XXXX` 还存在吗？它的作用是什么？**
-    
-    > **答**：仍然存在。5.x 新的精确秒级定时消息存入 `rmq_sys_wheel_timer`，但 `SCHEDULE_TOPIC_XXXX` 保留用于兼容 4.x 的固定延迟级别 API，确保旧客户端无需改造即可继续使用。
-    
-4. **Lite 模式为什么能支持海量队列？它的元数据存在哪里？不同节点间如何同步？**
-    
-    > **答**：Lite 模式用 RocksDB 替代了传统的 ConsumeQueue 文件存储元数据，避免了海量 mmap 文件导致的文件描述符爆炸和内存膨胀。元数据存储在 RocksDB 中，消息体仍存 CommitLog。元数据同步仅在 Controller 或 DLedger 模式下生效，从库定时向主库拉取变更（默认 10s）；传统 Master-Slave 模式下不支持自动同步。
-    
-5. **存算分离后，Proxy 和 Broker 各承担什么职责？带来什么好处？**
-    
-    > **答**：Proxy 负责协议适配、POP 处理、负载均衡、权限校验等计算逻辑，无状态可独立扩缩容；Broker 专注消息存储与复制。好处包括：弹性伸缩（Proxy 独立扩容）、高可用（Proxy 重启不触发 Rebalance）、多协议支持、部署灵活（可合并或分离）。
-    
-6. **如何配置才能保证消息零丢失？**
-    
-    > **答**：生产者同步发送并处理 `SEND_OK`；Broker 主节点 `SYNC_FLUSH` + `SYNC_MASTER`（或 DLedger 多数派）；消费者传统模式手动提交 Offset，POP 模式由 Broker 自动管理位点。三者缺一不可。
-    
-7. **请描述时间轮（TimerWheel + TimerLog）的工作流程。**
-    
-    > **答**：`TimerEnqueuePutService` 将定时消息元数据顺序追加到 TimerLog，并更新 TimerWheel 对应秒槽位的偏移量。`TimerDequeueGetService` 每秒推进时间轮，从 TimerLog 反向链表收集到期消息，读取 CommitLog 完整消息后投递到目标 Topic。
-    
-8. **RocketMQ 中零拷贝具体应用在哪些场景？分别使用什么系统调用？**
-    
-    > **答**：写入/刷盘使用 `mmap`；消息消费拉取小数据量用 `mmap + write`，大数据量自动切换为 `sendfile`（`FileChannel.transferTo`）；主从复制主要使用 `sendfile`。
-    
-9. **如何监控消息堆积和消费 TPS？有哪些关键指标？**
-    
-    > **答**：使用 `rocketmq-exporter` 导出至 Prometheus。关键指标：`ConsumerLag`（堆积量）、`ConsumerTps`（消费 TPS）、`ProducerTps`（生产 TPS）、RT（p99/p999）、磁盘使用率、Full GC 频率。
-    
-10. **在低配置服务器上启动 NameServer 或 Broker 失败如何解决？**
-    
-    > **答**：NameServer 默认堆内存 256MB/512MB，Broker 默认 8GB。低配机器需修改 `runserver.sh` / `runbroker.sh` 中的 `-Xms` `-Xmx` 参数，调小堆内存以适应可用内存。
-    
-11. **事务消息如何保证最终一致性？事务回查的作用是什么？超过回查次数后消息去了哪里？**
-    
-    > **答**：通过两阶段提交 + 事务回查保证。回查用于解决生产者未发送二次确认时的状态不确定问题。超过最大回查次数（默认 15 次）后，消息被强制投递到事务死信队列 `%DLQ%{ProducerGroup}`，不会丢弃。
-    
-12. **广播模式与集群模式有什么区别？广播模式有哪些限制？**
-    
-    > **答**：集群模式每条消息只被组内一个消费者消费；广播模式每条消息被组内所有消费者消费。广播模式限制：服务端不维护消费进度、不支持重试和死信队列、不支持顺序消息、仅支持 Java Remoting 客户端。
-    
-13. **SQL92 过滤相比 Tag 过滤有什么优缺点？布隆过滤器的假阳性/假阴性对数据完整性有什么影响？**
-    
-    > **答**：SQL92 支持复杂属性过滤但 CPU 开销高；Tag 基于 Hash 预过滤性能好但表达能力弱。布隆过滤器只有假阳性（不匹配消息被误判为可能匹配，交由 SQL 解析器二次确认，浪费少量 CPU），绝无假阴性（匹配消息不会被跳过），因此绝不会导致数据丢失。
-    
-14. **`enableTopicMessageTypeCheck` 默认值是什么？生产环境建议如何配置？**
-    
-    > **答**：默认 `false`（向下兼容 4.x）。生产环境建议显式设为 `true`，强制校验消息类型与 Topic 声明一致，防止误用导致的行为异常。
-    
-15. **同一 ConsumerGroup 内订阅关系不一致会导致什么问题？为什么不会“卡死”？**
-    
-    > **答**：会导致消息丢失（Tag 被覆盖后静默丢弃）或消费停滞（Topic 被覆盖后拉取被拒绝）。不会“卡死”是因为 Broker 不会让消费者无限等待，而是直接返回不匹配的消息或拒绝请求，问题表现为数据缺失而非线程阻塞。
-    
-16. **`transientStorePoolEnable` 开启有哪些注意事项？为什么事务消息场景绝对不能开启？**
-    
-    > **答**：开启后预分配 5 个堆外 Buffer（每个 = CommitLog 大小，默认共 5GB），仅适用于异步刷盘 + 高性能场景。事务消息不能开启是因为半消息必须先可靠落盘才能被回查识别，堆外内存池的异步刷入延迟会导致半消息在宕机时丢失或回查失败。
-    
-17. **分层存储适用于哪些场景？有哪些已知限制？**
-    
-    > **答**：适用于日志归档、审计合规、长周期回溯。限制：目前仅支持单副本、冷数据消费有额外延迟、与 Controller 模式集成不完善。当前为技术预览阶段。
-    
-18. **消息体大小有哪些限制？限制的是消息体还是整个序列化包？**
-    
-    > **答**：事务/定时消息体最大 64KB；普通/顺序消息**整个序列化总大小**（含 Topic、Body、Properties）最大默认 4MB。自定义属性总和不超过 16KB。
-    
-19. **Message ID 的结构是什么？按 Message ID 查询为什么比按 Message Key 查询效率更高？**
-    
-    > **答**：Message ID = Broker IP + CommitLog Offset 编码。查询时直接解析出物理地址读取文件，O(1) 定位。Message Key 需查 IndexFile 哈希链表，存在冲突遍历，效率较低。
-    
-20. **重试队列和死信队列的 Topic 命名规则分别是什么？多个 Topic 订阅时，重试队列是按 Topic 隔离的还是按 Group 隔离的？**
-    
-    > **答**：重试队列 `%RETRY%{ConsumerGroup}`，死信队列 `%DLQ%{ConsumerGroup}`。严格按 ConsumerGroup 维度隔离，同一 Group 订阅多个 Topic 时共用同一个重试 Topic，通过消息内部属性 `RETRY_TOPIC` 区分原始 Topic。
-    
-21. **`rocketmq-exporter` 还推荐使用吗？官方最新的可观测性方案是什么？**
-    
-    > **答**：仍推荐使用，官方正在积极演进以集成 OpenTelemetry（OTLP）标准，是当前官方维护的监控导出方案。
-    
-22. **ACL 1.0 从哪个版本开始移除？升级时需要注意什么？**
-    
-    > **答**：5.3.3 版本彻底移除 ACL 1.0。升级到 5.3.0+ 需尽快迁移至 ACL 2.0（ABAC）配置，否则权限控制将失效。
-    
-23. **POP 模式下，未 ACK 的消息首先被投递到哪里？何时才会进入 `%RETRY%{ConsumerGroup}`？**
-    
-    > **答**：首先被 `ReviveService` 投递到 Revive Topic（`rmq_sys_revive_topic`）进行延迟调度。仅当 Revive 流程检查 Checkpoint BitMap 确认该消息未被任何其他消费者成功处理后，才会转入 `%RETRY%{ConsumerGroup}`。
-    
-24. **Lite 模式的 RocksDB 元数据同步在什么部署模式下才能生效？传统 Master-Slave 模式下从库能否读取 LiteTopic？**
-    
-    > **答**：仅在 Controller 模式或 DLedger 模式下生效。传统 Master-Slave 异步复制模式下 Lite 元数据不会自动同步，从库无法提供 LiteTopic 读服务。
-    
-25. **POP 模式下，ReviveService 如何判断一条超时消息是真正需要重试，还是已经被其他消费者成功处理？其幂等依据是什么？**
-    
-    > **答**：ReviveService 通过检查该消息对应的 PopCheckPoint 中的 BitMap 来判断。若 BitMap 中该消息对应位已被标记为 ACK（1），说明已被其他消费者成功处理，Revive 流程跳过该消息不再重试；若仍为 0，则判定为真正超时，转入重试队列。BitMap 即为幂等依据，确保同一条消息不会被重复投递到重试队列。
-    
-26. **POP 模式的 `invisibleTime` 是否存在上限？超出上限时 Broker 如何处理？**
-    
-    > **答**：存在上限，受 Broker 端 `popMaxInvisibleTime` 参数限制（默认 12 小时，5.3.0+ 可配置）。超出上限时 Broker 会静默截断为最大值，不会返回错误。业务侧需注意避免因设置过长导致 Revive 队列积压和消息长时间不可见。
+**1. 传统模式下，为什么扩容消费者到一定程度就无效了？POP 模式如何解决？**
+
+> 答：传统模式下，一个 Queue 同一时刻只能被一个消费者独占，消费能力上限 = Topic 的队列数。当消费者数 ≥ 队列数时，新增消费者无法分配到队列，扩容无效。POP 模式采用消息粒度的“借阅-确认”机制，多个消费者可并发拉取同一 Queue 的消息，打破了 1:1 绑定，使扩容始终有效直至触及 CPU/IO 瓶颈。
+
+**2. POP 模式收到乱序 ACK 时，消费位点如何推进？**
+
+> 答：Broker 维护 `expectedOffset`（期望下一个连续位点）和 BitMap。仅当从 `expectedOffset` 开始的连续消息都被 ACK（BitMap 对应位为 1）时，才将位点推进到最后一条连续消息之后。乱序 ACK 只会更新 BitMap，不会立即推进位点，直到缺口被填补。若某条消息一直未 ACK 直至超时，Revive 线程会将其重新投递并强制推进位点，不会导致队列死锁。
+
+**3. 5.x 定时消息中 `SCHEDULE_TOPIC_XXXX` 还存在吗？它的作用是什么？**
+
+> 答：仍然存在。5.x 新的精确秒级定时消息存入 `rmq_sys_wheel_timer`，但 `SCHEDULE_TOPIC_XXXX` 保留用于兼容 4.x 的固定延迟级别 API，确保旧客户端无需改造即可继续使用。
+
+**4. Lite 模式为什么能支持海量队列？它的元数据存在哪里？不同节点间如何同步？**
+
+> 答：Lite 模式用 RocksDB 替代了传统的 ConsumeQueue 文件存储元数据，避免了海量 mmap 文件导致的文件描述符爆炸和内存膨胀。元数据存储在 RocksDB 中，消息体仍存 CommitLog。元数据同步仅在 Controller 或 DLedger 模式下生效，从库定时向主库拉取变更（默认 10s）；传统 Master-Slave 模式下不支持自动同步。
+
+**5. 存算分离后，Proxy 和 Broker 各承担什么职责？带来什么好处？**
+
+> 答：Proxy 负责协议适配、POP 处理、负载均衡、权限校验等计算逻辑，无状态可独立扩缩容；Broker 专注消息存储与复制。好处包括：弹性伸缩（Proxy 独立扩容）、高可用（Proxy 重启不触发 Rebalance）、多协议支持、部署灵活（可合并或分离）。
+
+**6. 如何配置才能保证消息零丢失？**
+
+> 答：生产者同步发送并处理 `SEND_OK`；Broker 主节点 `SYNC_FLUSH` + `SYNC_MASTER`（或 DLedger 多数派）；消费者传统模式手动提交 Offset，POP 模式由 Broker 自动管理位点。三者缺一不可。
+
+**7. 请描述时间轮（TimerWheel + TimerLog）的工作流程。**
+
+> 答：`TimerEnqueuePutService` 将定时消息元数据顺序追加到 TimerLog，并更新 TimerWheel 对应秒槽位的偏移量。`TimerDequeueGetService` 每秒推进时间轮，从 TimerLog 反向链表收集到期消息，读取 CommitLog 完整消息后投递到目标 Topic。
+
+**8. RocketMQ 中零拷贝具体应用在哪些场景？分别使用什么系统调用？**
+
+> 答：写入/刷盘使用 `mmap`；**消息消费拉取默认不使用零拷贝（由 `transferMsgByHeap=true` 控制，走 JVM 堆内存），仅当显式配置 `transferMsgByHeap=false` 时，才使用 `sendfile`（`FileChannel.transferTo`）**；主从复制主要使用 `sendfile`。
+
+**9. 如何监控消息堆积和消费 TPS？有哪些关键指标？**
+
+> 答：使用 `rocketmq-exporter` 导出至 Prometheus。关键指标：`ConsumerLag`（堆积量）、`ConsumerTps`（消费 TPS）、`ProducerTps`（生产 TPS）、RT（p99/p999）、磁盘使用率、Full GC 频率。
+
+**10. 在低配置服务器上启动 NameServer 或 Broker 失败如何解决？**
+
+> 答：NameServer 默认堆内存 256MB/512MB，Broker 默认 8GB。低配机器需修改 `runserver.sh` / `runbroker.sh` 中的 `-Xms-Xmx` 参数，调小堆内存以适应可用内存。
+
+**11. 事务消息如何保证最终一致性？事务回查的作用是什么？超过回查次数后消息去了哪里？**
+
+> 答：通过两阶段提交 + 事务回查保证。回查用于解决生产者未发送二次确认时的状态不确定问题。**超过最大回查次数（默认 15 次）后，Broker 会直接丢弃（Discard）该半消息并打印警告日志，RocketMQ 中不存在事务死信队列。** 生产环境必须通过本地事务表或自定义回查监听器做好补偿。
+
+**12. 广播模式与集群模式有什么区别？广播模式有哪些限制？**
+
+> 答：集群模式每条消息只被组内一个消费者消费；广播模式每条消息被组内所有消费者消费。广播模式限制：服务端不维护消费进度、不支持重试和死信队列、不支持顺序消息、仅支持 Java Remoting 客户端。
+
+**13. SQL92 过滤相比 Tag 过滤有什么优缺点？布隆过滤器的假阳性/假阴性对数据完整性有什么影响？**
+
+> 答：SQL92 支持复杂属性过滤但 CPU 开销高；Tag 基于 Hash 预过滤性能好但表达能力弱。布隆过滤器只有假阳性（不匹配消息被误判为可能匹配，交由 SQL 解析器二次确认，浪费少量 CPU），绝无假阴性（匹配消息不会被跳过），因此绝不会导致数据丢失。
+
+**14. `enableTopicMessageTypeCheck` 默认值是什么？生产环境建议如何配置？**
+
+> 答：默认 `false`（向下兼容 4.x）。生产环境建议显式设为 `true`，强制校验消息类型与 Topic 声明一致，防止误用导致的行为异常。
+
+**15. 同一 ConsumerGroup 内订阅关系不一致会导致什么问题？为什么不会“卡死”？**
+
+> 答：会导致消息丢失（Tag 被覆盖后静默丢弃）或消费停滞（Topic 被覆盖后拉取被拒绝），且随着心跳交替会导致订阅关系不断震荡翻转，表现为 TPS 剧烈抖动。不会“卡死”是因为 Broker 不会让消费者无限等待，而是直接返回不匹配的消息或拒绝请求，问题表现为数据缺失而非线程阻塞。
+
+**16. `transientStorePoolEnable` 开启有哪些注意事项？为什么事务消息场景绝对不能开启？**
+
+> 答：开启后预分配 5 个堆外 Buffer（每个 = CommitLog 大小，默认共 5GB），仅适用于异步刷盘 + 高性能场景。事务消息不能开启是因为**事务回查线程直接从 CommitLog/PageCache 读取状态，若消息还在堆外内存未刷入，回查线程将找不到对应的物理偏移量**，导致回查逻辑直接失效或误判。
+
+**17. 分层存储适用于哪些场景？有哪些已知限制？**
+
+> 答：适用于日志归档、审计合规、长周期回溯。限制：目前仅支持单副本、冷数据消费有额外延迟、与 Controller 模式集成不完善。当前为技术预览阶段。
+
+**18. 消息体大小有哪些限制？限制的是消息体还是整个序列化包？**
+
+> 答：事务/定时消息体最大 64KB；普通/顺序消息整个序列化总大小（含 Topic、Body、Properties）最大默认 4MB。自定义属性总和不超过 16KB。
+
+**19. Message ID 的结构是什么？按 Message ID 查询为什么比按 Message Key 查询效率更高？**
+
+> 答：**Message ID = Broker IP (4字节) + 端口 (2字节) + CommitLog Offset (8字节) + 时间戳/唯一标识 (4字节)**。查询时直接解析出物理地址读取文件，O(1) 定位。Message Key 需查 IndexFile 哈希链表，存在冲突遍历，效率较低。
+
+**20. 重试队列和死信队列的 Topic 命名规则分别是什么？多个 Topic 订阅时，重试队列是按 Topic 隔离的还是按 Group 隔离的？**
+
+> 答：重试队列 `%RETRY%{ConsumerGroup}`，死信队列 `%DLQ%{ConsumerGroup}`。严格按 ConsumerGroup 维度隔离，同一 Group 订阅多个 Topic 时共用同一个重试 Topic，通过消息内部属性 `RETRY_TOPIC` 区分原始 Topic。
+
+**21. `rocketmq-exporter` 还推荐使用吗？官方最新的可观测性方案是什么？**
+
+> 答：仍推荐使用，官方正在积极演进以集成 OpenTelemetry（OTLP）标准，是当前官方维护的监控导出方案。
+
+**22. ACL 1.0 从哪个版本开始移除？升级时需要注意什么？**
+
+> 答：5.3.3 版本彻底移除 ACL 1.0。升级到 5.3.0+ 需尽快迁移至 ACL 2.0（ABAC）配置，否则权限控制将失效。
+
+**23. POP 模式下，未 ACK 的消息首先被投递到哪里？何时才会进入 `%RETRY%{ConsumerGroup}`？**
+
+> 答：首先被 `ReviveService` 投递到 Revive Topic（`rmq_sys_revive_topic`）进行延迟调度。仅当 Revive 流程检查 Checkpoint BitMap 确认该消息未被任何其他消费者成功处理后，才会转入 `%RETRY%{ConsumerGroup}`。
+
+**24. Lite 模式的 RocksDB 元数据同步在什么部署模式下才能生效？传统 Master-Slave 模式下从库能否读取 LiteTopic？**
+
+> 答：仅在 Controller 模式或 DLedger 模式下生效。传统 Master-Slave 异步复制模式下 Lite 元数据不会自动同步，从库无法提供 LiteTopic 读服务。
+
+**25. POP 模式下，ReviveService 如何判断一条超时消息是真正需要重试，还是已经被其他消费者成功处理？其幂等依据是什么？**
+
+> 答：ReviveService 通过检查该消息对应的 PopCheckPoint 中的 BitMap 来判断。若 BitMap 中该消息对应位已被标记为 ACK（1），说明已被其他消费者成功处理，Revive 流程跳过该消息不再重试；若仍为 0，则判定为真正超时，转入重试队列。BitMap 即为幂等依据，确保同一条消息不会被重复投递到重试队列。
+
+**26. POP 模式的 `invisibleTime` 是否存在上限？超出上限时 Broker 如何处理？**
+
+> 答：存在上限，受 Broker 端 `popMaxInvisibleTime` 参数限制（默认 12 小时，5.3.0+ 可配置）。超出上限时 Broker 会静默截断为最大值，不会返回错误。业务侧需注意避免因设置过长导致 Revive 队列积压和消息长时间不可见。
